methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:3: error: '=' expected but ';' found.
  var seenBaggle==false;
                       ^